[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/UI/MainMenu/MMCamera.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/MainMenu/MainLogo.tscn" type="PackedScene" id=2]
[ext_resource path="res://WorldEnvironment.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/UI/MainMenu/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://Scenes/UI/MainMenu/Orbital.tscn" type="PackedScene" id=5]
[ext_resource path="res://Resources/ui/themefinalentrophy.tres" type="Theme" id=6]
[ext_resource path="res://Resources/Orbitron/orbitronfont.tres" type="DynamicFont" id=7]

[node name="MainMenu" type="Spatial"]
pause_mode = 2
script = ExtResource( 4 )

[node name="MMCamera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -0.136321, 0.990665, 0, -0.990665, -0.136321, -18.675, 18, -3.888 )
current = true
fov = 120.0
script = ExtResource( 1 )

[node name="WobTween" type="Tween" parent="MMCamera"]

[node name="ZoomTween" type="Tween" parent="MMCamera"]

[node name="MainLogo" parent="." instance=ExtResource( 2 )]

[node name="Orbital" parent="MainLogo" instance=ExtResource( 5 )]

[node name="Orbital2" parent="MainLogo" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -49.9881, 0, -25.5357 )
rotation_speed = 0.5

[node name="Orbital3" parent="MainLogo" instance=ExtResource( 5 )]
transform = Transform( 0.787441, 0, -0.61639, 0.262689, 0.904641, 0.335587, 0.557612, -0.426174, 0.712352, -1.5409, 0, 0.778145 )
rotation_speed = 2.0

[node name="Orbital4" parent="MainLogo" instance=ExtResource( 5 )]
transform = Transform( 0.865178, -0.180999, -0.467661, -0.501465, -0.312278, -0.806855, 0, 0.932589, -0.360941, -33.1837, -14.5273, -41.3668 )

[node name="Orbital5" parent="MainLogo" instance=ExtResource( 5 )]
transform = Transform( 0.865178, -0.180999, -0.467661, -0.501465, -0.312278, -0.806855, 0, 0.932589, -0.360941, -50.0313, 22.763, -32.1499 )
rotation_speed = 0.5

[node name="Orbital6" parent="MainLogo" instance=ExtResource( 5 )]
transform = Transform( 0.372956, 0.0355654, -0.927167, -0.926818, 0.0613609, -0.370463, 0.0437162, 0.997482, 0.0558476, -20.4218, -22.763, -41.6476 )
rotation_speed = 2.0

[node name="Orbital7" parent="MainLogo" instance=ExtResource( 5 )]
transform = Transform( 0.641691, 0, -0.766964, -0.103134, 0.990918, -0.0862884, 0.759998, 0.13447, 0.635863, -47.8668, -2.28934, -0.517237 )

[node name="Orbital8" parent="MainLogo" instance=ExtResource( 5 )]
transform = Transform( 0.641691, 0, -0.766964, -0.103134, 0.990918, -0.0862884, 0.759998, 0.13447, 0.635863, -49.6347, 3.34598, -42.0441 )
rotation_speed = 0.5

[node name="Orbital9" parent="MainLogo" instance=ExtResource( 5 )]
transform = Transform( 0.0776255, 0.32686, -0.94188, 0.130976, 0.933199, 0.334642, 0.988342, -0.149341, 0.0296291, -38.7283, -3.92116, 11.5077 )
rotation_speed = 2.0

[node name="Orbital10" parent="MainLogo" instance=ExtResource( 5 )]
transform = Transform( 0.555176, -0.831407, -0.023265, -0.58614, -0.371246, -0.72015, 0.590101, 0.413447, -0.693428, -26.7096, -11.4164, -41.2926 )

[node name="Orbital11" parent="MainLogo" instance=ExtResource( 5 )]
transform = Transform( 0.555176, -0.831407, -0.023265, -0.58614, -0.371246, -0.72015, 0.590101, 0.413447, -0.693428, -44.5895, 26.4774, -43.2216 )
rotation_speed = 0.5

[node name="Orbital12" parent="MainLogo" instance=ExtResource( 5 )]
transform = Transform( 0.205794, -0.74221, -0.637787, -0.960637, -0.0289355, -0.276294, 0.186614, 0.669542, -0.71895, -18.305, -20.8693, -32.8796 )
rotation_speed = 2.0

[node name="WorldEnvironment" parent="." instance=ExtResource( 3 )]

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.374655, 0.927164, 0, -0.927164, 0.374655, 0, 20.737, 7.94638 )
light_color = Color( 0.941176, 0.784314, 1, 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -69.5
margin_right = 69.5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 339.0
margin_right = 139.0
margin_bottom = 375.0
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 7 )
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_top = 379.0
margin_right = 139.0
margin_bottom = 529.0
rect_min_size = Vector2( 0, 150 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 533.0
margin_right = 139.0
margin_bottom = 569.0
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 7 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_top = 573.0
margin_right = 139.0
margin_bottom = 723.0
rect_min_size = Vector2( 0, 150 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer"]
margin_top = 727.0
margin_right = 139.0
margin_bottom = 741.0
text = "ESC for Options Menu"

[connection signal="tween_all_completed" from="MMCamera/WobTween" to="MMCamera" method="_on_WobTween_tween_all_completed"]
[connection signal="tween_all_completed" from="MMCamera/ZoomTween" to="MMCamera" method="_on_ZoomTween_tween_all_completed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
